[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/LoadSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=4]
[ext_resource path="res://assets/themes/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/images/ui/green_button09.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/shadedDark26.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/shadedDark14.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/shadedDark24.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/shadedDark25.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/shadedDark30.png" type="Texture" id=11]
[ext_resource path="res://src/UserInterface/FullScreenButton.gd" type="Script" id=12]
[ext_resource path="res://src/UserInterface/PauseButton.gd" type="Script" id=13]
[ext_resource path="res://src/UserInterface/TouchScreenButtonScale.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("DeathOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 100.0
margin_right = 26.0
margin_bottom = 114.0
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -78.0
margin_right = 96.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 2 )]
margin_right = 190.0
margin_bottom = 50.0
text = "Main Menu"
next_scene_path = "res://src/UserInterface/MainMenu.tscn"

[node name="RetyButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_top = 54.0
margin_right = 190.0
margin_bottom = 105.0

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 1 )]
margin_top = 109.0
margin_right = 190.0
margin_bottom = 160.0

[node name="ScoreBackground" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -134.3
margin_top = 3.63649
margin_right = -4.30029
margin_bottom = 52.6365
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -114.901
margin_top = 17.3896
margin_right = -47.9006
margin_bottom = 37.3896
text = "Score %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 1 )

[node name="FullScreenButton" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 148.0
margin_bottom = 68.0
texture_normal = ExtResource( 11 )
expand = true
flip_h = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 78.0
margin_bottom = 68.0
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_scale = 300.0

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TouchScreenButton" parent="CanvasLayer/Control"]
position = Vector2( 100, -200 )
normal = ExtResource( 9 )
action = "move_left"
visibility_mode = 1
script = ExtResource( 14 )

[node name="Control2" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_right = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TouchScreenButton" parent="CanvasLayer/Control2"]
position = Vector2( 0, -200 )
normal = ExtResource( 10 )
action = "move_right"
visibility_mode = 1
script = ExtResource( 14 )

[node name="VBoxContainer" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpButton" type="TouchScreenButton" parent="CanvasLayer/VBoxContainer"]
position = Vector2( -220, -200 )
normal = ExtResource( 7 )
action = "jump"
visibility_mode = 1
script = ExtResource( 14 )

[connection signal="pressed" from="FullScreenButton" to="FullScreenButton" method="_on_Button_pressed"]
[connection signal="pressed" from="PauseButton" to="PauseButton" method="_on_Button_pressed"]
